# qwen-thai-lora

./: .env  .gitignore  DOCKER_COMMANDS.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_SUCCESS.md  Dockerfile  LEARNING_PATH.md  PROJECT_COMPLETE.md  QUICK_START.md  README.md  README_NEW.md  RESTRUCTURE_PLAN.md  RESTRUCTURE_SUCCESS.md  TRAINING_SUMMARY.md  chat_gui.py  conversation.json  docker-compose.prod.yml  docker-compose.yml  docker-demo.sh  host_thai_model.py  manage.sh  merge_thai_model.py  pyproject.toml  requirements.txt  thai-model-api.nginx  validate_structure.py
.github/: copilot-instructions.md
config/: model_config.yaml  requirements.txt  training_config.yaml
deployment/docker/: Dockerfile  Dockerfile.cpu
deployment/monitoring/: prometheus.yml
deployment/systemd/: thai-model-api.service
docs/: CHAT_FORMAT_FIX.md  CHAT_INTERFACE_TEST_SUCCESS.md  DOCS_ORGANIZATION_COMPLETE.md  DOCUMENTATION_INDEX.md  HOSTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MANAGE_RESTRUCTURE.md  OPENAI_IMPLEMENTATION_SUMMARY.md  OPENAI_INTEGRATION.md  OPENAI_SETUP_GUIDE.md  OPENAI_STATUS.md  OPENAI_WEB_INTEGRATION.md  POSTGRESQL_INTEGRATION.md  POSTGRES_IMPLEMENTATION_SUMMARY.md  POSTGRES_SUCCESS.md  README.md  RESTRUCTURING_SUMMARY.md  SCRIPTS_ORGANIZATION_COMPLETE.md  VLLM_MANAGEMENT.md
learning/: README.md  learn.py  module_1_1_package_architecture.py  module_1_2_configuration.py  module_2_1_transformers_lora.py  module_2_2_training.py  module_3_1_fastapi.py  module_3_2_advanced_api.py  module_4_1_docker.py  module_4_2_deployment.py  module_5_1_performance_optimization.py  module_5_2_monitoring_observability.py  progress_tracker.py  run_next_module.py
scripts/: README.md  api_server.py  launch_gui.sh  manage_vllm.sh  start_api.sh
scripts/deprecated/: manage-old.sh
scripts/setup/: setup.sh  setup_openai_key.sh  setup_postgres.sh  setup_postgres_fixed.sh
src/: __init__.py
src/hosting/: README.md  __init__.py  fastapi_server.py  host_model.py  setup_production.py  test_api_client.py
src/interfaces/: __init__.py  gradio_gui.py  ollama_chat.py  ollama_utils.py  vllm_chat.py
src/testing/: README.md  __init__.py  evaluate_model.py  manual_test.py  run_all_tests.py  test_model.py  test_simple.py  test_streaming.py
src/training/: __init__.py
src/utils/: __init__.py
thai_model/: __init__.py
thai_model/api/: __init__.py  fastapi_server.py  models.py
thai_model/core/: __init__.py  chat_database.py  config.py  model.py  tokenizer.py
thai_model/interfaces/: __init__.py  openai_chat.py  vllm_chat.py  web_chat.py  web_chat_db.py
thai_model/tests/: test_simple.py
thai_model/training/: __init__.py  finetune_thai_model.py  merge_lora_model.py
thai_model/utils/: __init__.py
